# Garbage-Collector-For-C

./: README.md  Vagrantfile  bootstrap.sh
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
project/: CMakeLists.txt
project/include/: c_gc.h  obj.h  obj_list.h  obj_node.h  ptr_info.h  ptr_info_list.h  ptr_info_node.h  stack_block.h  stack_block_list.h  stack_block_node.h  stack_list.h  stack_node.h
project/lib/: c_gc.c  obj.c  obj_list.c  obj_node.c  ptr_info.c  ptr_info_list.c  ptr_info_node.c  stack_block.c  stack_block_list.c  stack_block_node.c  stack_list.c  stack_node.c
